<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">paintboard</string>
    <string name="manual">사용법</string>
    <string name="board">게시판</string>
    <string name="drawing">그림 그리기</string>
    <string name="mypic">내 그림</string>
    <string name="end">끝내기</string>
    <string name="action_settings">Settings</string>
    <string name="color_selection_title">Color Selection</string>
    <string name="pen_selection_title">Pen Selection</string>
    <string name="color_btn">Color</string>
    <string name="pen_btn">Pen</string>
    <string name="eraser_btn">Eraser</string>
    <string name="undo_btn">Undo</string>
    <string name="handwriting_save_btn">Save Handwriting</string>
    
    <string-array name="boardTPentry">
        <item>전체보기</item>
        <item>글쓴이</item>
        <item>글 제목</item>
    </string-array>

</resources>
